client/src/styles/containers/Filters.scss
@import '../globals';

.filters {
	background: darken($primary-color, 5%);
}

.filters__content {
	max-width: $content-width;
	padding: 10px 25px 25px;
	margin: 0 auto;
	color: $white;
}

.filters h3 {
	margin: 0;
	font-size: 24px;
}

.filters fieldset {
	border-radius: 10px;
	border: $medium-border;
}

.filters label {
	display: flex;
	align-items: center;
}

@media (min-width: $bp-medium) {
	.filters__fields {
		display: flex;
	}

	.filters fieldset {
		flex-grow: 1;
		flex-basis: 0; // needed for fields to be equal width
	}
}

@media (min-width: $bp-large) {
	.filters {
		position: fixed;
		top: $nav-height;
		height: calc(100% - #{$nav-height});
		overflow: scroll;
		width: $aside-width;
	}

	.filters__fields {
		display: block;
	}
}

